--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,14 @@ more-itertools==6.0.0
 namedlist==1.7
 packaging==19.0
 pluggy==0.9.0
-py==1.8.0
+#py==1.8.0
 PyMySQL==0.9.3
 pyparsing==2.4.0
 pytest==4.3.1
 requests==2.21.0
 selenium==3.141.0
 six==1.12.0
-urllib3==1.24.1
+#urllib3==1.24.1
 wcwidth==0.1.7
-xlrd==1.2.0
+#xlrd==1.2.0
 zipp==0.5.1
