--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ colorama==0.4.1
 enum34==1.1.6
 idna==2.8
 importlib-metadata==0.17
-lxml==4.3.2
+#lxml==4.3.2
 more-itertools==6.0.0
 namedlist==1.7
 packaging==19.0
@@ -22,5 +22,5 @@ selenium==3.141.0
 six==1.12.0
 #urllib3==1.24.1
 wcwidth==0.1.7
-#xlrd==1.2.0
+xlrd==1.2.0
 zipp==0.5.1
